--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,18 +59,10 @@ references:
        # sphinx-apidoc -o ./docs/source ./pytorch_lightning **/test_* --force --follow-links
        cd docs; make clean ; make html
 
-orbs:
-  aws-ecr: circleci/aws-cli@0.1.20
-  aws-ecs: circleci/aws-ecs@1.1.0
-
 executors:
   cpu-executor:
     docker:
       - image: circleci/python:3.7
-
-  gpu-executor: # aws-orb
-    docker:
-      - image: circleci/python:3.6
 
 jobs:
 
@@ -90,7 +82,7 @@ jobs:
       - *format
 
   PyTorch:
-    executor: gpu-executor
+    executor: cpu-executor
     environment:
       - TORCH_VERSION: "torch"
     steps: &steps
@@ -105,25 +97,25 @@ jobs:
           path: test-reports
 
   PyTorch-v1.1:
-    executor: gpu-executor
+    executor: cpu-executor
     environment:
       - TORCH_VERSION: "torch>=1.1, <1.2"
     steps: *steps
 
   PyTorch-v1.2:
-    executor: gpu-executor
+    executor: cpu-executor
     environment:
       - TORCH_VERSION: "torch>=1.2, <1.3"
     steps: *steps
 
   PyTorch-v1.3:
-    executor: gpu-executor
+    executor: cpu-executor
     environment:
       - TORCH_VERSION: "torch>=1.3, <1.4"
     steps: *steps
 
   PyTorch-v1.4:
-    executor: gpu-executor
+    executor: cpu-executor
     environment:
       - TORCH_VERSION: "torch>=1.4, <1.5"
     steps: *steps
