prune codecov exceptions

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,36 +18,10 @@ ignore = E731,W504
 max-line-length = 120
 
 [coverage:report]
-# TODO: this looks suspicion, it should be reviewed
 exclude_lines =
     pragma: no cover
     def __repr__
-    if self.debug:
-    if settings.DEBUG
-    raise AssertionError
-    raise NotImplementedError
-    if 0:
-    if __name__ == .__main__.:
-    except Exception as e
-    print(e)
-    print(traceback.print_exc())
-    return *
-    raise Exception
-    raise *
-    except *
     warnings
-    print
-    raise RuntimeError
-    break
-    pass
-    os.makedirs
-# TODO: to be reviewed, this should not be skipped
-omit =
-    pytorch_lightning/callbacks/pt_callbacks.py
-    tests/test_models.py
-    pytorch_lightning/testing_models/lm_test_module.py
-    pytorch_lightning/utilities/arg_parse.py
-    pl_examples/templates
 
 [flake8]
 # TODO: this should be 88 or 100 according PEP8
@@ -58,7 +32,11 @@ doctests = True
 verbose = 2
 # https://pep8.readthedocs.io/en/latest/intro.html#error-codes
 format = pylint
-ignore = E731,W504,F401,F841
+ignore =
+    E731
+    W504
+    F401
+    F841
 
 # setup.cfg or tox.ini
 [check-manifest]
@@ -67,6 +45,7 @@ ignore =
     tox.ini
     .github
     .github/*
+    .circleci
 
 [metadata]
 license_file = LICENSE
